fixed scrollbars on graph

--- a/designer/client/stylesheets/visualization.styl
+++ b/designer/client/stylesheets/visualization.styl
@@ -2,6 +2,7 @@
 @import "./_mixins.styl"
 
 .Page
+  position: relative
   overflow: hidden
   height 100%
   display flex
